# wasi-sol

./: Cargo.toml  LICENSE  README.md
.github/workflows/: clippy.yml  program.yml  rustfmt.yml
examples/basic/: Cargo.toml  index.css
examples/basic/src/: main.rs
examples/dioxus/: Cargo.toml  Dioxus.toml  README.md
examples/dioxus/assets/: main.css
examples/dioxus/src/: main.rs
examples/leptos/: Cargo.toml  README.md  index.css  index.html
examples/leptos/src/: main.rs
examples/todo-dapp-yew/: Cargo.toml  README.md  index.css
examples/todo-dapp-yew/src/: checkbox.rs  landing.rs  local_storage.rs  main.rs  task.rs  tasks.rs
examples/todo-program/: Anchor.toml
examples/todo-program-interface/: Cargo.toml  README.md  idl.json
examples/todo-program-interface/src/: accounts.rs  errors.rs  instructions.rs  lib.rs
examples/todo-program/programs/todo-program/: Cargo.toml
examples/todo-program/programs/todo-program/src/: constants.rs  error.rs  lib.rs
examples/todo-program/programs/todo-program/src/instructions/: create.rs  delete.rs  initialize.rs  mod.rs  update.rs
examples/todo-program/programs/todo-program/src/state/: mod.rs
examples/todo-program/tests/: Cargo.toml
examples/todo-program/tests/src/: lib.rs  test_ix.rs
examples/yew/: Cargo.toml  README.md  index.css
examples/yew/src/: main.rs
src/: adapter.rs  core.rs  lib.rs  provider.rs
src/adapter/: backpack.rs  phantom.rs  solflare.rs
src/core/: error.rs  response.rs  traits.rs  transaction.rs  wallet.rs
src/forms/dioxus/: login.rs
src/forms/leptos/: login.rs
src/forms/yew/: login.rs
src/provider/: connection.rs  dioxus.rs  local_storage.rs  wallet.rs
src/provider/dioxus/: connection.rs  local_storage.rs  wallet.rs
src/provider/leptos/: connection.rs  local_storage.rs  wallet.rs
src/provider/yew/: wallet.rs
src/solana/: object.rs
