[package]
name = "wasi-sol"
version = "0.0.1"
edition = "2021"
description = "🔒 A Solana Wallet adapter for WASM frameworks."
license = "MIT"
keywords = ["blockchain", "solana", "wallet", "wasm", "yew"]
categories = ["web-programming", "cryptography", "wasm"]
repository = "https://github.com/gigadao/wasi-sol"
documentation = "https://docs.rs/wasi-sol"
authors = [
	"GigaDAO Core Maintainers",
	"Mahmoud Harmouch oss@wiseai.dev",
]
exclude = ["examples"]

[dependencies]
anyhow = "1.0.86"
log = "0.4.21"
serde_json = "1.0.117"
solana-sdk = "=1.18.17"
thiserror = "1.0.61"
wasm-bindgen-futures = "0.4.42"
gloo-storage = "0.3.0"
js-sys = "0.3.69"
serde = { version = "1.0.203", features = ["derive"] }
web3 = { version = "0.19.0", default-features = false, features = ["eip-1193"] }
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
solana-client-wasm = "1.18.0"
emitter-rs = "0.0.5"
yew = "0.21.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"

[badges]
maintenance = { status = "actively-developed" }
