[package]
name = "wasi-sol-example"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-storage = "0.3.0"
log = "0.4.21"
serde = { version = "1.0.204", features = ["derive"] }
wasi-sol = { path = "../../", features = ["yew"] }
wasm-logger = "0.2.0"
web-sys = "0.3.69"
yew = { version = "0.21.0", features = ["csr"] }
